--- a/_config.yml
+++ b/_config.yml
@@ -89,14 +89,8 @@ service-worker: true
 page-mathjax: false
 
 # Friends
-friends:
+resume:
   [
-    { title: "乱序（Midare）", href: "http://mida.re/" },
-    { title: "Ebn Zhang", href: "https://ebnbin.dev/" },
-    { title: "Kun Qian", href: "http://kunq.me" },
-    { title: "Sherry Woo", href: "https://sherrywoo.me/" },
-    { title: "SmdCn", href: "http://blog.smdcn.net" },
-    { title: "JiyinYiyong", href: "http://tiye.me/" },
-    { title: "DHong Say", href: "http://dhong.co" },
-    { title: "尹峰以为", href: "http://ingf.github.io/" },
+    { title: "个人简历", href: "https://resume.shixiseng.com/resume/grp_keuuzw1wpwpc?lan=chinese" }
+    
   ]
