--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "Starting from the essence  starting from the simplest ideas  down-to-earth"
-sidebar-avatar: img/home-bg.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: img/avatar-hux.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
